--- a/src/app/features/settings/settings.page.scss
+++ b/src/app/features/settings/settings.page.scss
@@ -104,7 +104,7 @@
 
   ion-icon {
     font-size: 18px;
-    color: #ffffff;
+    color: var(--primary-contrast-color, #ffffff);
   }
 
   &--blue   { background-color: var(--action-primary); }
